# src/controllers/vitalMaster.controller.js
@@ -226,7 +226,7 @@ const vitalmstrController = () => {
     }
    
     if (getsearch.hasOwnProperty('status') && /\S/.test(getsearch.status)) {
-     findQuery.where['i_is_active'] = getsearch.status;
+     findQuery.where['is_active'] = getsearch.status;
      }
         
     try {
